2009-03-02  Richard Guenther  <rguenther@suse.de>             Ira Rosen  <irar@il.ibm.com>

PR tree-optimization/39318
	* tree-vect-transform.c (vectorizable_call): Transfer the EH region
	information to the vectorized statement.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@144541 138bc75d-0d04-0410-961f-82ee72b054a4